Replace Tab with Dots.

--- a/resources/mh-sea-web-vm-cloudinit.yaml
+++ b/resources/mh-sea-web-vm-cloudinit.yaml
@@ -18,7 +18,7 @@ write_files:
           proxy_set_header Upgrade $http_upgrade;
           proxy_set_header Connection keep-alive;
           proxy_set_header Host $host;
-	        proxy_set_header X-Real-IP $remote_addr;
+..        proxy_set_header X-Real-IP $remote_addr;
           proxy_cache_bypass $http_upgrade;
         }
       }
